--- a/ui/teste.html
+++ b/ui/teste.html
@@ -179,9 +179,9 @@
   <!-- Carrossel -->
   <div class="carousel-container">
     <div class="carousel" id="carousel">
-      <img src="im/FE1.jpg" alt="Foto 1">
-      <img src="im/FE2.jpg" alt="Foto 2">
-      <img src="im/FE3.jpg" alt="Foto 3">
+      <img src="FE1.jpg" alt="Foto 1">
+      <img src="FE2.jpg" alt="Foto 2">
+      <img src="FE3.jpg" alt="Foto 3">
     </div>
     <div class="carousel-buttons">
       <button onclick="moverCarrossel(-1)">❮</button>
